--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "express-session": "^1.0.4",
     "jsonwebtoken": "^5.0.0",
     "lodash": "~2.4.1",
-    "mail": "^0.2.3",
     "method-override": "~1.0.0",
     "mongoose": "~4.0.3",
     "morgan": "~1.0.0",
     "passport": "~0.2.0",
     "passport-local": "~0.1.6",
+    "random-hexhash": "^1.0.0",
+    "sendmail": "^1.1.1",
     "socket.io": "^1.0.6",
     "socket.io-client": "^1.0.6",
     "socketio-jwt": "^3.0.0"
