--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "cookie-parser": "~1.0.1",
     "errorhandler": "~1.0.0",
     "express": "~4.9.0",
+    "express-better-ratelimit": "^1.1.2",
     "express-jwt": "^3.0.0",
+    "express-limiter": "^1.6.0",
     "express-session": "^1.0.4",
     "jsonwebtoken": "^5.0.0",
     "lodash": "~2.4.1",
